# Flash-MinerU

./: .gitignore  MANIFEST.in  README-zh.md  README.md  pyproject.toml  requirements.txt
flash_mineru/: __init__.py  main.py
flash_mineru/mineru_core/: README.md  dispatch_mineru_class.py
flash_mineru/mineru_core/core/: pdf_class.py
flash_mineru/mineru_core/engine/: main.py  main_gpt_version.py  model_init.py  model_output_to_middle_json.py  vlm_magic_model.py  vlm_middle_json_mkcontent.py
flash_mineru/ray_utils/: __init__.py  env_registry.py
test/: test_main.py
