[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flash-mineru"
description = "Fast Inference Architecture for MinerU"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10, <4"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: Free For Educational Use",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = [
    "AI",
    "artificial intelligence",
]
dynamic = ["version", "dependencies"]

[project.urls]
Github = "https://github.com/OpenDCAI/Flash-MinerU"
"Bug Reports" = "https://github.com/OpenDCAI/Flash-MinerU/issues"


[tool.setuptools]
include-package-data = true
packages = ["flash_mineru"]  # 显式指定主包


[tool.setuptools.dynamic]
version = {attr = "flash_mineru.version.__version__"}
dependencies = {file = "requirements.txt"}


[project.optional-dependencies]
test = ["flask"]
vllm =["vllm>=0.7.0,<=0.9.2", "numpy<2.0.0"]
vllm07 = ["vllm<0.8", "numpy<2.0.0"]
vllm08 = ["vllm<0.9"]
# 要求numpy版本大于1.24小于2.0.0
kbc = ["vllm==0.6.3", "mineru[pipeline]==2.0.6"]
mineru = ["mineru[all]", "numpy>=1.24,<2.0.0", "sglang[all]>=0.4.8", "pypdf", "reportlab"]
myscale = ["clickhouse-driver"]
sglang =["sglang[all]"]
litellm = ["litellm>=1.70.0,<2.0.0"]
audio = ['librosa', 'soundfile']
vectorsql = ["sqlite-vec", "sqlite-lembed", "sentence_transformers"]
# 当前pdf2model环境不支持muxi
pdf2model =[
    "llamafactory[torch,metrics]>=0.9.0",
    "vllm>=0.7.0,<0.9.2", 
    "numpy>=1.24,<2.0.0",
    "mineru[pipeline]",
    "mineru-vl-utils"
]
eval =[
    "vllm>=0.7.0,<0.9.2"
]
rag = ["lightrag-hku", "asyncio"]
pdf2vqa=["mineru[vlm]>=2.5.0,<2.7.0"]
